fix: button alignment

--- a/src/components/profile/absenceFormular.styles.scss
+++ b/src/components/profile/absenceFormular.styles.scss
@@ -15,7 +15,7 @@
 			margin-left: auto;
 			margin-right: auto;
 			display: block;
-			text-align: center;
+			text-align: left;
 
 			@include breakpoint($fromLarge) {
 				margin-left: 0;
